[package]
name = "limiter"
version = "1.0.0"
authors = ["GiGa infosystems GmbH <support@giga-infosystems.com>"]
#build = "build.rs"

[dependencies]
#rustls-connector = "0.13.1"
dotenv = "0.15.0"
#native-tls = "0.2.7"
#urlencoding = "2.1.0"
systemstat = "0.1.8"
fd-lock = "3.0.0"
serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.66"


[dependencies.imap]
version = "2.4.1"
default-features = true

[features]
default = []