[package]
name = "limiter"
version = "1.0.0"
authors = ["GiGa infosystems GmbH <support@giga-infosystems.com>"]

[dependencies]
dotenv = "0.15.0"
systemstat = "0.1.8"
fd-lock = "3.0.0"
serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.66"

[features]
default = []